--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
 @use "./blocks/header";
 @use "./blocks/burger";
 @use "./blocks/logo";
+@use "./blocks/nav";
 @use "./blocks/info";
 @use "./blocks/about";
 @use "./blocks/advantages";
