--- a/blocks/_copyright.scss
+++ b/blocks/_copyright.scss
@@ -31,3 +31,19 @@
     font-weight: 300;
     line-height: normal;
 }
+
+@media(min-width: 768px) {
+  .copyright {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    margin-top: 83px;
+    justify-content: center;
+    flex-basis: 100%;
+    padding-bottom: 18px;
+  }
+  .copyright__img {
+    position: static;
+  }
+}
