--- a/blocks/_news.scss
+++ b/blocks/_news.scss
@@ -2,7 +2,7 @@
 
 .news {
   margin-top: 60px;
-  
+
 }
 
 .news__title {
@@ -42,4 +42,23 @@
   position: absolute;
   top: 2px;
   right: 2px;
+}
+
+@media(min-width: 768px) {
+
+  .news {
+    margin-top: 0;
+  }
+
+  .news__input-text {
+    width: 100%;
+    height: 50px;
+    border-radius: 4px;
+
+    &::placeholder {
+      @include mixin.text;
+      color: var(--gray-paragraph, #6C6C72);
+      padding: 13px 17px;
+    }
+  }
 }
