--- a/blocks/_social.scss
+++ b/blocks/_social.scss
@@ -1,21 +1,19 @@
 @use "../ulits/mixin";
 
-.social {
-  
-}
+.social {}
 
 .social__title {
   @include mixin.title;
   color: var(--White, #FFF);
-    /* H4-31.25px */
-    font-family: Josefin Sans;
-    font-size: 31.25px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 47.25px;
-    /* 151.2% */
-    text-transform: uppercase;
-    text-align: left;
+  /* H4-31.25px */
+  font-family: Josefin Sans;
+  font-size: 31.25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 47.25px;
+  /* 151.2% */
+  text-transform: uppercase;
+  text-align: left;
 }
 
 .social__text {
@@ -29,11 +27,24 @@
 }
 
 .social__item {
-    border-left: 1px solid #fff;
-    padding: 0 30px 0 30px;
+  border-left: 1px solid #fff;
+  padding: 0 30px 0 30px;
 }
 
-.social__item:first-child{
+.social__item:first-child {
   padding-left: 0;
   border-left: none;
+}
+
+.social__item:last-child {
+  padding-right: 0;
+}
+
+
+
+@media(min-width: 768px) {
+  .social__item {
+    border-left: 1px solid #fff;
+    padding: 0 18px;
+  }
 }
