--- a/blocks/_header.scss
+++ b/blocks/_header.scss
@@ -21,7 +21,7 @@
 
 .header__download {
   color: var(--White, #FFF);
-  font-size: 10px;
+  font-size: 1rem;
   font-weight: 600;
   line-height: normal;
   padding: 12px 6px;
