--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@
 @use "./blocks/news";
 @use "./blocks/copyright";
 @use "./blocks/box";
+@use "./blocks/form";
 
 html {
   font-family: 'Josefin Sans',
